[gd_scene load_steps=3 format=3 uid="uid://dckc8nrn7p425"]

[ext_resource type="Script" uid="uid://bljtkxil64h14" path="res://GUI/LandPanel.gd" id="1_nmy5p"]
[ext_resource type="Texture2D" uid="uid://2sdfbvf1isif" path="res://icon.svg" id="2_07q41"]

[node name="LandPanel" type="Panel"]
offset_left = 385.0
offset_top = 69.0
offset_right = 901.0
offset_bottom = 540.0
script = ExtResource("1_nmy5p")

[node name="Quit_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 475.0
offset_right = 515.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 25
text = "X"

[node name="Title" type="Label" parent="."]
self_modulate = Color(0, 0.87451, 1, 1)
layout_mode = 2
offset_right = 516.0
offset_bottom = 42.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 15
theme_override_font_sizes/font_size = 30
text = "土地面板"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 224.0
offset_top = 249.0
offset_right = 352.0
offset_bottom = 377.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
texture = ExtResource("2_07q41")
expand_mode = 1

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 313.0
offset_right = 1287.0
offset_bottom = 700.0
scale = Vector2(0.4, 0.4)

[node name="ProgressBar" type="ProgressBar" parent="VBox"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 30

[node name="HBox1" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="cost" type="Label" parent="VBox/HBox1"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "花费:999"

[node name="earn" type="Label" parent="VBox/HBox1"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "收益:999"

[node name="growthtime" type="Label" parent="VBox/HBox1"]
modulate = Color(1, 0.635294, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "生长时间:999"

[node name="experience" type="Label" parent="VBox/HBox1"]
modulate = Color(0.164706, 1, 0.341176, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "收获经验:999"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="canbuy" type="Label" parent="VBox/HBox2"]
modulate = Color(0.466667, 1, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "能否购买:是"

[node name="quality" type="Label" parent="VBox/HBox2"]
modulate = Color(1, 0.607843, 0.239216, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "品质:传奇"

[node name="weatherability" type="Label" parent="VBox/HBox2"]
modulate = Color(0.784314, 0.647059, 0.498039, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "耐候性:999"

[node name="level" type="Label" parent="VBox/HBox2"]
modulate = Color(0.394367, 0.644385, 0.816557, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "种植等级:999"

[node name="HBox3" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="description" type="Label" parent="VBox/HBox3"]
modulate = Color(0.988235, 0.831373, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "描述：啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊"

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 2
offset_top = 42.0
offset_right = 516.0
offset_bottom = 249.0
columns = 5

[node name="Dig_Button" type="Button" parent="Grid"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "开垦"
icon_alignment = 1
expand_icon = true

[node name="Plant_Button" type="Button" parent="Grid"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.760784, 0.533333, 0.160784, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "种植"
icon_alignment = 1
expand_icon = true

[node name="Remove_Button" type="Button" parent="Grid"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.870588, 0.870588, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "铲除"
icon_alignment = 1
expand_icon = true

[node name="Harvest_Button" type="Button" parent="Grid"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.188235, 0.839216, 0.243137, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "收获"
icon_alignment = 1
expand_icon = true

[node name="Water_Button" type="Button" parent="Grid"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0.87451, 0.87451, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "浇水"
icon_alignment = 1
expand_icon = true

[node name="Fertilize_Button" type="Button" parent="Grid"]
visible = false
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_colors/font_color = Color(0.509804, 0.301961, 0.85098, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "施肥"
icon_alignment = 1
expand_icon = true

[node name="Upgrade_Button" type="Button" parent="Grid"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.0705882, 0.411765, 0.87451, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "升级"
icon_alignment = 1
expand_icon = true

[node name="KillInsect_Button" type="Button" parent="Grid"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.929412, 0.760784, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "杀虫"
icon_alignment = 1
expand_icon = true

[node name="Grid2" type="GridContainer" parent="."]
layout_mode = 0
offset_top = 345.0
offset_right = 515.0
offset_bottom = 468.0
columns = 3
